<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cadastro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_s_splash"
    tools:context="com.mobile.activity.CadastroActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="175dp"
            android:id="@+id/imageView"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo"
            android:scaleX="0.8"
            android:scaleY="0.8"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/branco_fonte_logo"
            android:text="@string/info_cadastro"
            android:id="@+id/textView2" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginTop="4dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:ems="10"
            android:background="@color/amarelo_claro"
            android:id="@+id/edtCNome"
            android:hint="Nome e Sobrenome"
            android:imeOptions="actionNext"
            android:drawableRight="@mipmap/ic_action_person"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginTop="4dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:ems="10"
            android:background="@color/amarelo_claro"
            android:id="@+id/edtCEmail"
            android:imeOptions="actionNext"
            android:hint="@string/hint_email"
            android:drawableRight="@mipmap/ic_action_person"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginTop="4dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:ems="10"
            android:background="@color/amarelo_claro"
            android:id="@+id/edtCSenha"
            android:imeOptions="actionDone"
            android:hint="@string/hint_senha"
            android:drawableRight="@mipmap/ic_action_secure"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="right">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="35dp"
                android:paddingRight="35dp"
                android:textColor="@color/branco_fonte_logo"
                android:text="cancelar"
                android:id="@+id/btnCCancelar"
                android:background="@drawable/btn_entrar_seletor"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="4dp"
                android:paddingLeft="35dp"
                android:paddingRight="35dp"
                android:textColor="@color/branco_fonte_logo"
                android:text="Salvar"
                android:id="@+id/btnCSalvar"
                android:background="@drawable/btn_entrar_seletor"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/endereco_email"
            android:id="@+id/textView3"
            android:textColor="@color/branco_fonte_logo"/>
    </LinearLayout>
</RelativeLayout>
